update 23/10 - completed pagination, search